Added beginnings of 2nd page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,8 +19,13 @@
 </head>
 
 <body>
+
   <h1 id="center-title"><strong>EZ Cooking</strong></h1>
   <h2 id="center-small-title">Learn to cook!</h2>
+
+  <div class="search-bar">
+    <!-- To be implemented -->
+  </div>
 
   <div class="food-list-container">
     {{#each projects}}
