--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,43 +7,27 @@
     font-size: 300%;
 }
 
-.food-list-container {
-    width: 700px;
-    margin: 0px auto;
-}
-
-.food-list-container p {
+.row p {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: -10px;
 }
 
-.food-list-container .food-categories {
+.row .food-categories {
     position: relative;
   }
 
-.food-categories .thumbnail {
-    padding: 0%;
-    border: 0px;
-    margin-bottom: 0px;
-}
-
-/* Centered text */
-.food-categories p {
-    margin: 0;
-    position: absolute;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    font-size: 300%;
-    color: white;
-}
-
-.food-categories p span {
+.inner-name {
     background-color: rgba(34, 34, 34, 0.8);
-    padding: 1%;
+    padding: 1.5%;
     border-radius: 10px;
+    margin: auto;
+    font-size: 5vw;
+}
+
+.outer-name {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
 }
