minor changes, allow grid on mobile

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -28,7 +28,7 @@
     <div class="row">
 
       {{#each category }}
-      <div class="col-sm-4 food-column">
+      <div class="col-4 food-column">
         <a href="category/{{name}}" id="{{id}}">
           <div class="card text-white border-0 food-card-other">
             <img class="food-card-img" src="../images/{{image}}" alt="Card image">
