--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -29,7 +29,7 @@
 
       {{#each category }}
       <div class="col-4 food-column">
-        <a href="category/{{name}}" id="{{id}}">
+        <a href="../food/{{name}}" id="{{id}}">
           <div class="card text-white border-0 food-card-other">
             <img class="food-card-img" src="../images/{{image}}" alt="Card image">
             <div class="card-img-overlay text-center align-middle outer-name">
