--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -2,12 +2,12 @@
 <html>
 
 <head>
-  <title>EZ Cooking - {{categoryName}} Food</title>
+  <title>EZ Cooking - {{name}}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <link href="/css/category.css" rel="stylesheet">
+  <link href="/css/food.css" rel="stylesheet">
 </head>
 
 <body>
@@ -16,22 +16,46 @@
 
   <div class="container">
 
-    <h1><strong>Food Item Page</strong></h1>
+    <h1>
+      <strong>Learn to cook {{name}}</strong>
+    </h1>
 
-    <a href="/">Back To Home</a>
+    <br>
+    <h3>Here is some {{name}}.</h3>
 
     <div class="row">
-      
+
       <div class="col">
+
+        
+        <a href="/">Back To Categories</a>
+
+      </div>
+
+    <div class="col">
+
+    </div>
+
+      <div class="col">
+        
+        <a href="/instructions/{{name}}">Learn how to cook!</a>
 
       </div>
     </div>
 
+    <div class="row food-card-img">
+      <div class="col food-card-img">
+        <img class="food-card-img" src="../images/{{image}}" alt="Card image">
+      </div>
+    </div>
+
+    <h5>Page still under construction!</h5>
   </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/navbar.js"></script>
+  <script src="/js/backButton.js"></script>
 </body>
 
 </html>
