--- a/views/finish.handlebars
+++ b/views/finish.handlebars
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>EZ Cooking - {{categoryName}} Instructions</title>
+  <title>EZ Cooking - {{name}} Instructions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -16,13 +16,14 @@
 
   <div class="container">
 
-    <h1><strong>Instructions Page</strong></h1>
+    <h1><strong>Finish Page</strong></h1>
 
-    <h3>Step 1: Wait until we implement this.</h3>
+
+    <h3>Congratulations! You have finished cooking {{name}}!</h3>
 
     <a href="/">Back To Home</a>
     <br>
-    <a href="/../finish/{{name}}">Next</a>
+    <a href="/../share/{{name}}">Share</a>
 
     <div class="row">
       
