--- a/public/css/food.css
+++ b/public/css/food.css
@@ -6,6 +6,8 @@
     object-fit: scale-down;
     width: 50vw;
     height: 50vw;
+    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+    filter: grayscale(100%);
 }
 
   .inner-name {
