Removed Home button

--- a/views/instructions.handlebars
+++ b/views/instructions.handlebars
@@ -19,7 +19,7 @@
     <h1><strong>Instructions Page</strong></h1>
 
 
-    <h3 id="stepTitle">Step 1. Blah Blah<h3>
+    <h3 id="stepTitle">Proceed to the first step<h3>
 
     <a href="/">Back To Home</a>
     <br>
