--- a/views/instructions.handlebars
+++ b/views/instructions.handlebars
@@ -16,17 +16,14 @@
 
   <div class="container">
 
-    <h1>
+    <h2>
       <strong>Instructions Page</strong>
-    </h1>
-
-
+    </h2>
 
     <div class="row">
 
       <div class="col">
-        <h3 id="stepTitle">Proceed to the first step</h3>
-        <a href="/">Back To Home</a>
+        <p id="stepTitle">Proceed to the first step</p>
       </div>
 
     </div>
