Added start/stop buttons for voice

--- a/views/instructions.handlebars
+++ b/views/instructions.handlebars
@@ -43,6 +43,7 @@
     <div class="row">
       <div class="col">
         <h3>Speech synthesiser settings</h3>
+        <p>Will be moved to a settings page later, when we design one.</p>
         <form>
           <div>
             <label for="rate">Rate</label>
@@ -57,12 +58,18 @@
             <div class="clearfix"></div>
           </div>
           <select>
-
+            <!-- Populated in instructionfunctions.js -->
           </select>
-          <div class="controls">
-            <button id="play" type="submit">Play</button>
-          </div>
         </form>
+      </div>
+    </div>
+
+    <br>
+
+    <div class="row">
+      <div class="col">
+        <button id="button-play" type="submit">Play</button>
+        <button id="button-stop" type="submit">Stop</button>
       </div>
     </div>
 
