--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -55,10 +55,18 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/navbar.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
+  <script src="/js/firebaseCheck.js"></script>
 </body>
 
 <footer>
-  <p>Copyright 2018 EZ Cooking</p>
+  <br>
+  <p>© 2018 EZ Cooking</p>
 </footer>
 
 </html>
