--- a/views/ingTool.handlebars
+++ b/views/ingTool.handlebars
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -21,51 +21,59 @@
     </h1>
 
     {{#each tools}}
-    	<div> <h3>{{tool-name}}</h3>
-
-    	</div>
-
-    {{/each}}
-    <br>
-
-    {{#each ingredients}}
-    	<div> <h3> {{ingredient-name}}</h3>
-
-    	</div>
-    {{/each}}
-
-    <br>
-    <h3 id="itemsNeeded">Proceed onto cooking<h3>
-
-    <div class="row">
-
-      <div class="col">
-
-        
-        <a href="/">Back To Categories</a>
-
-      </div>
-
-    <div class="col">
+    <div>
+      <h3>{{tool-name}}</h3>
 
     </div>
 
-      <div class="col">
-        
-        <a href="/instructions/{{name}}">Learn how to cook!</a>
+    {{/each}}
+    <br> {{#each ingredients}}
+    <div>
+      <h3> {{ingredient-name}}</h3>
 
-      </div>
     </div>
+    {{/each}}
 
-  
+    <br>
+    <h3 id="itemsNeeded">Proceed onto cooking
+      <h3>
 
-    
-   
+        <div class="row">
+
+          <div class="col">
+
+
+            <a href="/">Back To Categories</a>
+
+          </div>
+
+          <div class="col">
+
+          </div>
+
+          <div class="col">
+
+            <a href="/instructions/{{name}}">Learn how to cook!</a>
+
+          </div>
+        </div>
+
+
+
+
+
   </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/navbar.js"></script>
   <script src="/js/bootstrap.min.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
+  <script src="/js/firebaseCheck.js"></script>
 </body>
 
 </html>
