--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -37,18 +37,16 @@
 
   <div class="row">
     <div class="col">
-        <button class="button" id="sign-in-google">
-          <img class="img-responsive" src="/images/login/google_signin_buttons/web/2x/btn_google_signin_light_focus_web@2x.png">
-        </button>
+      <button class="button" id="sign-in-google">
+        <img class="img-responsive" src="/images/login/google_signin_buttons/web/2x/btn_google_signin_light_focus_web@2x.png">
+      </button>
     </div>
-  </div>
   </div>
 
   <div class="row">
     <div class="col">
       <h2 id="login-status">You are not logged in.</h2>
     </div>
-  </div>
   </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
@@ -59,43 +57,15 @@
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyARfyMjd4yj6KkscpvHu2i0Xgw0xKcn7G8",
-      authDomain: "ez-cooking-21ebe.firebaseapp.com",
-      databaseURL: "https://ez-cooking-21ebe.firebaseio.com",
-      projectId: "ez-cooking-21ebe",
-      storageBucket: "ez-cooking-21ebe.appspot.com",
-      messagingSenderId: "796679434279"
-    };
-    firebase.initializeApp(config);
-  </script>
-  <script src="/js/firebase.js"></script>
-
-
-<script>
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId      : '{your-app-id}',
-      cookie     : true,
-      xfbml      : true,
-      version    : '{latest-api-version}'
-    });
-      
-    FB.AppEvents.logPageView();   
-      
-  };
-
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "https://connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
-</script>
+  <script src="/js/firebase.js"></script> <!-- Should be this, not firebaseCheck -->
 
 </body>
+
+
+<footer>
+  <br>
+  <p>© 2018 EZ Cooking</p>
+</footer>
+
 
 </html>
