Tools/Ingred. Page

--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -21,14 +21,14 @@
     </h1>
 
     <br>
-    <h3>Here is some {{name}}.</h3>
-
+  
+  
     <div class="row">
 
       <div class="col">
 
         
-        <a href="/">Back To Categories</a>
+        <a href="/">Back To Dishes</a>
 
       </div>
 
@@ -38,7 +38,7 @@
 
       <div class="col">
         
-        <a href="/ingTool/{{name}}">Learn how to cook!</a>
+        <a href="/ingTool/{{name}}">Start Cooking!</a>
 
       </div>
     </div>
