--- a/public/css/food.css
+++ b/public/css/food.css
@@ -23,4 +23,11 @@
       justify-content: center;
       flex-direction: column;
   }
-  
+
+  h3 {
+    font-size: 1.2em;
+  }
+  .col-6 {
+    padding-bottom: 12px;
+  }
+
