--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -49,7 +49,12 @@
       </div>
     </div>
 
-    <h5>Page still under construction!</h5>
+    <h5>{{time}}</h5>
+    {{#each steplist}}
+
+    <h5>{{summary}}</h5>
+
+    {{/each}}
   </div>
 
   <script src="https://code.jquery.com/jquery.js"></script>
