--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -7,42 +7,50 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-  <link href="/css/category.css" rel="stylesheet">
+  <link href="/css/login.css" rel="stylesheet">
 </head>
 
-<body>
+<body background="/images/login/background_splash.jpg" class="bg">
 
-  <div class="container">
+  <div class="container fill">
+    <div class="row align-items-center justify-content-center">
 
-    <h2>
-      <strong>EZ Cooking</strong>
-    </h2>
+      <div class="col-12">
+        <h2 class="text-center" id="top-title">
+          <strong></strong>
+        </h2>
+      </div>
 
-    <p>Log In!</p>
+      <div class="col-12">
+        <h1 class="text-center" id="top-title">
+          <strong>EZ Cooking</strong>
+        </h1>
+      </div>
 
-    <div class="row">
-      <div class="col">
-        <div class="button" id="sign-in-google">
-          <img class="img-responsive" src="/images/login/google_signin_buttons/web/2x/btn_google_signin_light_focus_web@2x.png">
+      <div class="col-12">
+        <div class="text-center mx-auto login-button" id="sign-in-google">
+          <img src="/images/login/google_signin_buttons/web/2x/btn_google_signin_light_normal_web@2x.png" class="img-fluid">
         </div>
       </div>
-    </div>
 
-    <br>
-
-    <div class="row">
-      <div class="col">
-        <button class="button img-responsive" id="sign-in-guest">
-          Sign in as guest
-        </button>
+      <div class="col-12">
+        <div class="text-center mx-auto login-button" id="sign-in-facebook">
+          <img src="/images/login/facebook_signin_buttons/fb_login.png" class="img-fluid rounded">
+        </div>
       </div>
-    </div>
 
-    <br>
+      <div class="col-12">
+        <div class="d-flex login-button justify-content-center">
+          <button class="button login-button-guest" id="sign-in-guest">
+            Sign in as guest
+          </button>
+        </div>
+      </div>
 
-    <div class="row">
-      <div class="col">
-        <p id="login-status">You are not logged in.</p>
+      <div class="col-12">
+        <div class="d-flex justify-content-center fixed-bottom">
+          <p id="login-status">You are not logged in.</p>
+        </div>
       </div>
     </div>
 
@@ -60,4 +68,5 @@
   <!-- Should be this, not firebaseCheck -->
 
 </body>
+
 </html>
