--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -40,7 +40,7 @@
       </div>
 
       <div class="col-12">
-        <div class="d-flex login-button justify-content-center">
+        <div class="d-flex login-button mx-auto">
           <button class="button login-button-guest" id="sign-in-guest">
             Sign in as guest
           </button>
