added options for tts and sr, and began share page

--- a/views/finish.handlebars
+++ b/views/finish.handlebars
@@ -16,19 +16,21 @@
 
   <div class="container">
 
-    <h1><strong>Finish Page</strong></h1>
-
-
-    <h3>Congratulations! You have finished cooking {{name}}!</h3>
-
-    <a href="/">Back To Home</a>
-    <br>
-    <a href="/../share/{{name}}">Share</a>
 
     <div class="row">
-      
+
       <div class="col">
 
+        <h3>
+          <strong>Finish</strong>
+        </h3>
+
+
+        <p>Congratulations! You have finished cooking {{name}}!</p>
+
+        <a href="/">Back To Home</a>
+        <br>
+        <a href="/../share/{{name}}">Share</a>
       </div>
     </div>
 
@@ -37,7 +39,7 @@
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/navbar.js"></script>
   <script src="/js/bootstrap.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-database.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
