--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -16,9 +16,9 @@
 
   <div class="container">
 
-    <h1>
+    <h3>
       <strong>Learn to cook {{name}}</strong>
-    </h1>
+    </h3>
 
     <br>
   
@@ -49,10 +49,10 @@
       </div>
     </div>
 
-    <h5>{{time}}</h5>
+    <p>{{time}}</p>
     {{#each steplist}}
 
-    <h5>{{summary}}</h5>
+    <p>{{summary}}</p>
 
     {{/each}}
   </div>
