--- a/views/ingTool.handlebars
+++ b/views/ingTool.handlebars
@@ -16,15 +16,15 @@
 
   <div class="container">
 
-    <h1>
+    <h3>
       <strong>Tools and Ingredients: {{name}}</strong>
-    </h1>
+    </h3>
 
     <!-- Testing Columns -->
     <div class="row"> <!-- row 1 -->
       {{#each tools}}
         <div class="col-6">
-          <h3>{{tool-name}}</h3>
+          <p>{{tool-name}}</p>
         </div>
     {{/each}}
     </div> <!-- closing row 1 -->
@@ -34,7 +34,7 @@
     <div class="row">
       {{#each ingredients}}
       <div class="col-6">
-        <h3>{{ingredient-name}}</h3>
+        <p>{{ingredient-name}}</p>
       </div>
       {{/each}} 
     </div> <!-- end of ingredients -->
@@ -49,7 +49,7 @@
           <div class="col">
 
 
-            <a href="/">Back To Dish</a>
+            <a href="/food/{{name}}">Back To Dish</a>
 
           </div>
 
