Added login description

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -22,9 +22,15 @@
       </div>
 
       <div class="col-12">
-        <h1 class="text-center" id="top-title">
+        <h1 class="text-center p-3 mb-2 bg-half-dark text-white" id="top-title">
           <strong>EZ Cooking</strong>
         </h1>
+      </div>
+
+      <div class="col-12">
+        <h5 class="text-center p-3 mb-2 bg-half-dark text-white" id="top-title">
+          The app that makes cooking easy and fun.
+        </h5>
       </div>
 
       <div class="col-12">
