--- a/public/css/food.css
+++ b/public/css/food.css
@@ -1,33 +1,4 @@
-.food-column {
-    padding: 0px;
-}
-
 .food-card-img {
-    object-fit: scale-down;
-    width: 50vw;
-    height: 50vw;
-    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
-
-  .inner-name {
-      background-color: rgba(34, 34, 34, 0.8);
-      padding: 2.5%;
-      border-radius: 10px;
-      margin: auto;
-      font-size: 3.5vw;
-  }
-  
-  .outer-name {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-  }
-
-  h3 {
-    font-size: 1.2em;
-  }
-  .col-6 {
-    padding-bottom: 12px;
-  }
-
