favorites feature finished

--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -10,7 +10,7 @@
   <link href="/css/category.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="setPageType('Favorites', 'none');"> 
 
   <div id="topNavBar"></div>
 
@@ -18,14 +18,7 @@
 
     <h1 class="text-center">Favorites</h1>
 
-    <div class="row">
-      
-      <div class="col">
-        <p>This is where we place the user's favorite foods.</p>
-        <br>
-        <p>To be built later!</p>
-      </div>
-
+    <div class="row" id="food-row">
     </div>
 
   </div>
