--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -10,19 +10,24 @@
   <link href="/css/food.css" rel="stylesheet">
 </head>
 
-<body>
+<body onload="setPageType('Food', '{{name}}');">
 
   <div id="topNavBar"></div>
 
   <div class="container">
 
     <div class="row">
-      <div class="col">
-        <h3>{{name}}</h3>
+      <div class="col-auto">
+        <h3 class="align-middle">{{name}}</h3>
+      </div>
+
+      <div class="col-auto">
+        <img id="favorites-star" src="../images/favorites/star_unchecked.svg"
+        onclick="checkIfFavorite('{{name}}', true)">
       </div>
 
       <div class="col">
-        
+        <p id="favorites-message"></p>
       </div>
     </div>
 
@@ -60,6 +65,7 @@
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase-firestore.js"></script>
   <script src="https://www.gstatic.com/firebasejs/4.9.1/firebase.js"></script>
   <script src="/js/firebaseCheck.js"></script>
+
 </body>
 
 </html>
