--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -29,11 +29,15 @@
 
     <div class="row">
       <div class="col text-left">
+        <button class="button">
         <a href="/">Back To Dishes</a>
+        </button>
       </div>
 
       <div class="col text-right">
+        <button class="button">
         <a href="/ingTool/{{name}}">Start Cooking!</a>
+        </button>
       </div>
     </div>
 
@@ -43,10 +47,11 @@
       </div>
     </div>
 
-    <h5>Summary for cooking {{name}}</h5>
-    <p>{{time}}</p>
+    <h5>Overview: {{name}}</h5>
+
+    <p id="eta">{{time}}</p>
     {{#each steplist}}
-    <p>{{summary}}</p>
+    <p id="steps">{{summary}}</p>
     {{/each}}
 
   </div>
