fixed some things

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -25,8 +25,10 @@
 
     <h1 class="text-center">{{categoryName}}</h1>
 
+      <div class="col text-left">
+        <a href="/">Back</a>
+      </div>
     <div class="row">
-
       {{#each category }}
       <div class="col-4 food-column">
         <a href="../food/{{name}}" id="{{id}}">
