--- a/views/food.handlebars
+++ b/views/food.handlebars
@@ -27,9 +27,10 @@
     </div>
 
 
+
     <div class="row">
       <div class="col text-left">
-        <a href="/">Back To Dishes</a>
+        <a href="/category/{{category}}">Back</a>
       </div>
 
       <div class="col text-right">
@@ -63,3 +64,4 @@
 </body>
 
 </html>
+
