--- a/views/favorites.handlebars
+++ b/views/favorites.handlebars
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <link href="/css/category.css" rel="stylesheet">
+  <link href="/css/favorites.css" rel="stylesheet">
 </head>
 
 <body onload="setPageType('Favorites', 'none');"> 
@@ -17,6 +18,12 @@
   <div class="container">
 
     <h1 class="text-center">Favorites</h1>
+
+    <div class="row">
+      <div class="col">
+        <p id="no-favorites-message">Seems like you haven't favorited any recipes yet.</p>
+      </div>
+    </div>
 
     <div class="row" id="food-row">
     </div>
