--- a/views/finish.handlebars
+++ b/views/finish.handlebars
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <link href="/css/category.css" rel="stylesheet">
+  <link href="/css/finishPage.css" rel="stylesheet">
 </head>
 
 <body>
@@ -26,11 +27,18 @@
         </h3>
 
 
-        <p>Congratulations! You have finished cooking {{name}}!</p>
+        <div id="finishbox">
+        <p id="f_text">Congratulations! <br>You have finished cooking {{name}}!</p>
+        </div>
 
-        <a href="/">Back To Home</a>
-        <br>
-        <a href="/../share/{{name}}">Share</a>
+        <div id="options_section">
+          <p>
+            <a href="/../share/{{name}}" class="button">Share</a>
+          </p>
+          <p>
+            <a href="/" class="button">Back To Home</a>
+          </p>
+        </div>
       </div>
     </div>
 
